button css update

--- a/example/dialog.html
+++ b/example/dialog.html
@@ -145,6 +145,7 @@
                                 label: 'Email',
                                 help: "...",
                                 name: 'simpleText',
+                                placeholder: 'Type email address here',
                                 validator: 'email'
                             },
                             {
