--- a/example/dialog.html
+++ b/example/dialog.html
@@ -170,6 +170,16 @@
                                 validator: $A.newValidator({num: true, min: 0})
                             },
                             {
+                                type:'radio',
+                                name:'radio group',
+                                label:'First'
+                            },
+                            {
+                                type:'radio',
+                                name:'radio group',
+                                label:'Second'
+                            },
+                            {
                                 label: 'Százalékos cucc',
                                 help: "Teszt százalékos cucca",
                                 name: 'percentage',
