--- a/example/dialog.html
+++ b/example/dialog.html
@@ -244,9 +244,9 @@
                         hash: 'ImportContacts',
                         buttons: [
                             {
-                                skin: 'nobox-green',
+                                skin: 'simple-white',
                                 text: $A.translate('Cancel'),
-                                float: 'left',
+                                float: 'none',
                                 click: function () {
                                     alert('CANCEL');
                                     dialog.hide();
@@ -255,7 +255,7 @@
                             {
                                 skin: 'simple-orange',
                                 text: 'Next',
-                                float: 'right',
+                                float: 'none',
                                 click: function () {
                                     var a = form.inputs();
                                     var send = true;
