--- a/example/button.html
+++ b/example/button.html
@@ -1,31 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>QUnit Example</title>
-        <link rel="stylesheet" href="css/jquery-ui.min.css" />
-        <link rel="stylesheet" href="css/jquery.multiselect.css">
-        <link rel="stylesheet" href="css/jquery.multiselect.filter.css">
-        <link rel="stylesheet" href="../src/automizy.css">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Select Example</title>
+    <script src="js/jquery.min.js"></script>
+    <link rel="stylesheet" href="../dist/automizy.css">
+    <script src="../dist/automizy.js"></script>
+    <script>
+        $(function () {
 
-        <script src="js/jquery.min.js"></script>
-        <script src="js/jquery-ui.min.js"></script>
-        <script src="js/require.js"></script>
-        <script src="js/jquery.multiselect.min.js"></script>
-        <script src="js/jquery.multiselect.filter.js"></script>
-        <script>
-            var btn1;
-            var btn2;
-            $(function () {
-                requirejs.config({
-                    paths: {
-                        automizyJsDir: '../src',
-                        automizyJs: '../src/automizy'
-                    }
-                });
-                require([
-                    "automizyJs"
-                ], function ($A) {
                 //Creating Button module with object
                 btn1 = $A.newButton({
                     text: "New Button",
@@ -34,10 +18,16 @@
                     skin: "simple-white"
                 });
 
-                //Creating Button module with method chaining
-                btn2 = $A.newButton().text("New Button").float('right').skin('simple-orange').draw();
+                    //Creating Button module with method chaining
+                    btn2 = $A.newButton().text("New Button").float('right').skin('simple-orange').draw();
+                    //Creating Button module with method chaining
+                    btn3 = $A.newButton().text("New Button").float('right').skin('simple-green').draw();
+
+                    //Creating Button module with method chaining
+                    btn4 = $A.newButton().text("New Button").float('right').skin('nobox-orange').draw();
+                    //Creating Button module with method chaining
+                    btn5 = $A.newButton().text("New Button").float('right').skin('nobox-green').draw();
             });
-        });
         </script>
     </head>
     <body></body>
