--- a/example/select.html
+++ b/example/select.html
@@ -16,7 +16,8 @@
                     {value:323, html:'Körte fa (selected)', selected:true},
                     {value:324, html:'Barack <b>pálinka</b> (html code)'},
                     {value:327, html:'Szilva lekvár (different content)', textValue:'Szilva <b>pálinka</b>'},
-                    {value:339, html:'Egy_tanulmany_arrol_hogy_hogyan_fozzunk_palinkat_lekvarbol (long content)'}
+                    {value:328, html:'Eper leves'},
+                    {value:339, html:'Egy_tanulmany_arrol_hogy_hogyan_fozzunk_palinkat_lekvarbol (long content + icon)', icon:'form'}
                 ]).change(function(){
                     console.log(this.val());
                     console.log(this.originalInput().val());
@@ -29,7 +30,7 @@
                     {value:126, html:'Répa', group:'Zőccség'},
                     {value:126, html:'Zeller', group:'Zőccség'},
                     {value:126, html:'Káposzta', group:'Zőccség'},
-                    {value:126, html:'Petrezselyem', group:'Zőccség'}
+                    {value:126, html:'Petrezselyem', group:'Zőccség', icon:'action'}
                 ]).change(function(){
                     console.log(this.val());
                     console.log(this.originalInput().val());
