input icons update

--- a/example/form.html
+++ b/example/form.html
@@ -27,9 +27,10 @@
                             {
                                 label: 'Életkor',
                                 help: "Életkor of something",
-                                icon: "add-box",
+                                icon: "automizy-icon-add-box",
                                 name: 'customFields.életkor',
-                                id: 'age'
+                                id: 'age',
+                                validator: "email"
                             },
                             {
                                 label: 'Szülinap',
