input & dialog fixes

--- a/example/form.html
+++ b/example/form.html
@@ -29,8 +29,15 @@
                                 help: "Életkor of something",
                                 icon: "automizy-icon-add-box",
                                 name: 'customFields.életkor',
-                                id: 'age',
-                                validator: "email"
+                                id: 'age'
+                            },
+                            {
+                                label: 'Jelszó',
+                                help: "aasd",
+                                type: 'password',
+                                icon: "automizy-icon-add-box",
+                                name: 'customFields.életkor',
+                                id: 'password'
                             },
                             {
                                 label: 'Szülinap',
