table inline edit fix

--- a/example/form.html
+++ b/example/form.html
@@ -37,7 +37,10 @@
                                 type: 'password',
                                 icon: "automizy-icon-add-box",
                                 name: 'customFields.életkor',
-                                id: 'password'
+                                id: 'password',
+                                iconClick: function(){
+                                    console.log('icon click')
+                                }
                             },
                             {
                                 label: 'Szülinap',
