--- a/example/select.html
+++ b/example/select.html
@@ -39,7 +39,7 @@
                 {value: 125, html: 'Krumpli', group: 'Zőccség'},
                 {value: 126, html: 'Répa', group: 'Zőccség'},
                 {value: 127, html: 'Káposzta', group: 'Zőccség'},
-                {value: 128, html: 'Petrezselyem', group: 'Zőccség', icon: 'action'}
+                {value: 128, html: 'Petrezselyem', group: 'Zőccség', icon: 'automizy-icon-action'}
             ]).change(function () {
                 console.log(this.val());
                 console.log(this.originalInput().val());
