form, dialog update

--- a/example/form.html
+++ b/example/form.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../src/styles/button.css">
     <link rel="stylesheet" href="../src/styles/input.css">
     <link rel="stylesheet" href="../src/styles/select.css">
+    <link rel="stylesheet" href="../src/styles/form.css">
     <link rel="stylesheet" href="../src/styles/mobile.css">
     <link rel="stylesheet" href="../src/styles/core.css">
     <script src="../dist/automizy.js"></script>
