--- a/example/dialog.html
+++ b/example/dialog.html
@@ -6,7 +6,14 @@
     <title>Select Example</title>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="../dist/automizy.css">
+    <link rel="stylesheet" href="../src/styles/table.css">
+    <link rel="stylesheet" href="../src/styles/button.css">
+    <link rel="stylesheet" href="../src/styles/input.css">
+    <link rel="stylesheet" href="../src/styles/select.css">
+    <link rel="stylesheet" href="../src/styles/dialog.css">
+    <link rel="stylesheet" href="../src/styles/form.css">
+    <link rel="stylesheet" href="../src/styles/mobile.css">
+    <link rel="stylesheet" href="../src/styles/core.css">
     <script src="../dist/automizy.js"></script>
     <script>
         $(function () {
@@ -83,7 +90,7 @@
                 ],
                 content: newSegmentForm
             });
-            var form = $A.newForm({
+            window.form = $A.newForm({
                 method: "POST",
                 enctype: 'multipart/form-data',
                 inputs: [
@@ -211,6 +218,7 @@
             dialog = $A.newDialog({
                 title: 'Import contacts',
                 hash: 'ImportContacts',
+                maxWidth: '600',
                 buttons: [
                     {
                         skin: 'nobox-green',
