--- a/example/select.html
+++ b/example/select.html
@@ -38,6 +38,8 @@
                 window.exampleInput3 = $('#example-3').automizySelect();
 
                 window.exampleInput4 = $('#example-4').automizySelect();
+
+                window.exampleInput4 = $('#example-5').automizySelect().emptyMessage('No options').options([]);
             });
         </script>
     </head>
@@ -63,6 +65,8 @@
                 <option value="audi" selected>Audi</option>
             </optgroup>
         </select>
+
+        <select id="example-5"></select>
     </body>
 </html>
 
