label after position fix

--- a/example/form.html
+++ b/example/form.html
@@ -23,6 +23,7 @@
                                 label: 'Név',
                                 help: "Név of something",
                                 name: 'customFields.név',
+                                id: 'nev',
                                 placeholder: 'nagyonnagyonhosszúplészholder'
                             },
                             {
@@ -30,7 +31,8 @@
                                 help: "Életkor of something",
                                 icon: "automizy-icon-add-box",
                                 name: 'customFields.életkor',
-                                id: 'age'
+                                id: 'age',
+                                labelAfter: ' év'
                             },
                             {
                                 label: 'Jelszó',
