table buttons title & autoHide

--- a/example/table.html
+++ b/example/table.html
@@ -197,6 +197,7 @@
                     {
                         text: 'Edit campaign',
                         condition: 'select-one',
+                        autoHide: true,
                         disabled: true,
                         click: function () {
                             console.log({
