table openable inline box icon

--- a/example/table.html
+++ b/example/table.html
@@ -86,6 +86,7 @@
                         text: 'Kampány neve',
                         hideable: false,
                         order: 'asc',
+                        mainCell: true,
                         editable: true,
                         setInlineInputObject: function (cell) {
                             cell.inlineInputObject({
@@ -224,6 +225,7 @@
                         }
                     }
                 ],
+
                 inlineButtons: [
                     {
                         text: 'edit',
