select disable fix

--- a/example/select.html
+++ b/example/select.html
@@ -56,11 +56,12 @@
                     [0, '--- Nothing ---'],
                     [12, 'First Segment'],
                     [15, 'Second Segment']
-                ]
+                ],
+                disabled: true
             }).draw();
 
             //window.exampleInput5.automizySelect();
-                window.exampleInput6 = $('#example-6').automizySelect().emptyMessage('No options').options([]);
+            window.exampleInput6 = $('#example-6').automizySelect().emptyMessage('No options').options([]);
         });
     </script>
 </head>
