--- a/example/select.html
+++ b/example/select.html
@@ -51,13 +51,14 @@
                 type: 'select',
                 name: 'segments[]',
                 automizySelect: true,
+                label: 'Segment',
                 id: 'select',
                 options: [
                     [0, '--- Nothing ---'],
                     [12, 'First Segment'],
                     [15, 'Second Segment']
                 ],
-                disabled: true
+                disabled: false
             }).draw();
 
             //window.exampleInput5.automizySelect();
